# Trading-simSearch

./: .env  .gitignore  README.md  backtest_results.csv  best_config.json  compare_strategies.py  config_playground.py  golden_config.json  grid_search_params.py  grid_search_results.csv  hello.py  market_forecast.py  market_search.env  optimize_params.py  pyproject.toml  quick_compare.py  run_backtest.py  run_best_model_selection.py  run_grid_search.py  test_quant.py
data/cache/: AAPL_2024-06-01_2024-09-01.parquet  GLD_2024-06-01_2024-09-01.parquet  QQQ_2024-06-01_2024-09-01.parquet  SPY_2024-06-01_2024-07-01.parquet  SPY_2024-06-01_2024-09-01.parquet
data/test/: es-warnings.txt  warnings.txt
notebooks/: market-search.ipynb
reports/: grid_search_best_trades_20260113_194115.csv  grid_search_comparison_20260113_195456.csv  grid_search_optimization_best_trades_20260113_200545.csv  grid_search_optimization_comparison_20260113_200545.csv
sim-search/: config.py  forecaster.py  plots.py  times.py  windowing.py
sim_search/: __init__.py  backtester.py  builder.py  calendar_events.py  clustering.py  config.py  core.py  costs.py  datastructures.py  filters.py  forecaster.py  models.py  optimizer.py  plots.py  reporting.py  shared_dataframe.py  times.py  visualization.py  volatility.py  windowing.py
sim_search/data/: __init__.py  loader.py
